<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World</string>
    <string name="drawer_open">menu open</string>
    <string name="drawer_close">menu close</string>
    <string name="title">Calculator</string>
    <string name="back">←</string>
    <string name="and">AND</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="or">OR</string>
    <string name="mul">*</string>
    <string name="equ">=</string>
    <string name="xor">XOR</string>
    <string name="plu">+</string>
    <string name="minus">-</string>
    <string name="hex">Hex</string>
    <string name="home">Home</string>
    <string name="divide">/</string>
    <string name="remain">%</string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="left"><![CDATA[<<]]></string>
    <string name="title_bin">Binary Calculator</string>
    <string name="sin">sin</string>
    <string name="square">x²</string>
    <string name="binary">Binary</string>
    <string name="graph">Graph</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="bracket">( )</string>
    <string name="tan">tan</string>
    <string name="sort">sort</string>
    <string name="point">.</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="root">√x</string>
    <string name="cos">cos</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="start">Start</string>
    <string name="last">Last</string>
    <string name="result">Result</string>
    <string name="ret">Return</string>
    <string name="function">Function</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="graph_activity">Graph Activity</string>
    <string name="date">Date</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="date_calculator">Date Calculator</string>
    <string name="_1st_date_input">1st Date Input</string>
    <string name="_2nd_date_input">2nd Date Input</string>
    <string name="date_difference">Date Difference</string>
</resources>