<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fitsSystemWindows="true"
    tools:context=".Arithmetics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/function1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:height="50dp"
                android:text="@string/function"
                android:textColor="@color/white"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/equation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:maxLength="10"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/empty1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="20pt"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2pt"
            android:background="@color/line_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/function2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:height="50dp"
                android:textColor="@color/white"
                android:text="@string/function"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/equation2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:maxLength="10"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/empty2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="20pt"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2pt"
            android:background="@color/line_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/function3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:height="50dp"
                android:textColor="@color/white"
                android:text="@string/function"
                android:textSize="15pt" />

            <TextView
                android:id="@+id/equation3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="end"
                android:maxLength="10"
                android:textSize="20pt" />

            <TextView
                android:id="@+id/empty3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:textSize="20pt"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2pt"
            android:background="@color/line_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/yBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/y" />

                <Button
                    android:id="@+id/tanBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/tan"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/cosBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/cos"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/sinBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/sin"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/numBtn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/numBtn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/numBtn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/numBtn0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/graphBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/graph" />

                <Button
                    android:id="@+id/numBtn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/numBtn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/numBtn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/xBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:enabled="false"
                    android:text="@string/x" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/homeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/home" />

                <Button
                    android:id="@+id/numBtn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/numBtn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/numBtn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/equalBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:enabled="false"
                    android:text="@string/equ" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_color_selector" />

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/plu" />

                <Button
                    android:id="@+id/subBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/minus" />

                <Button
                    android:id="@+id/mulBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/mul" />

                <Button
                    android:id="@+id/divBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_color_selector"
                    android:text="@string/divide" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>