<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fitsSystemWindows="true"
    tools:context=".Arithmetics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_bar_widget_height"
            android:splitMotionEvents="false">



            <TextView
                android:id="@+id/list_title"
                style="@style/MenuBtnTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <ImageButton
                android:layout_width="@dimen/settings_menu_bar_back_btn_width"
                android:layout_height="@dimen/settings_menu_bar_widget_height"
                android:layout_alignParentEnd="true"
                android:id="@+id/back_btn"
                android:background="@drawable/title_back_btn_selector" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:text="@string/_1st_date_input"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2pt"
                android:background="@color/line_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="100sp"
                    android:height="55dp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_date_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/calendar_input" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:text="@string/_2nd_date_input"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2pt"
                android:background="@color/line_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lastDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="100sp"
                    android:textColor="@color/white"
                    android:height="55dp"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn_date_last"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/calendar_input"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:text="@string/date_difference"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2pt"
                android:background="@color/line_app" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resultView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="55dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:paddingStart="100sp"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>